#167: self-review fixes from reviewer panel
Tech-writer blockers:
- UnmappedTables.REGISTRY: corrected legacy table names to the FLSTest
  plural spelling (LanguageTranslations / PersonFlightTimeCredits /
  PersonFlightTimeCreditTransactions / Settings / SystemLogs /
  UserAccountStates / PersonPersonCategories). Previous keys invented
  PersonFlightTimeCreditHistory and used singular spellings that don't
  exist in the legacy schema dump.
- Story AC + test-plan: AbstractMapperContractTest signature corrected to
  <M extends Mapper>; "EntityType.INSERT_ORDER" → "EntityType declaration
  order" (no INSERT_ORDER field exists).

Maintainability + security improvements:
- AbstractMapperContractTest round-trip strengthened — now captures bound
  parameter values per column position, asserts setObject called at each
  position with non-null value modulo @ParityIgnore. Closes the gap where
  a mapper using setString/setInt or binding wrong values would silently
  pass the "at-least-N calls" check.
- AbstractMapperContractTest.columnsAreCallerSafeMutation: dropped
  unreachable early-return; relies on columnsAreNotEmpty precondition.
- CountryMapperTest.legacyRow: derives the UUID from the seeded Faker
  (UUID.randomUUID broke the determinism the abstract Javadoc asserts).
- ArchitectureTest: extended disk-sink rule to FileWriter / FileChannel /
  RandomAccessFile (Files.write* / Files.newOutputStream / FileWriter
  qualify as writable sinks the Security plan calls out). Added
  createNativeQuery ban per AC. Added structural invariant that
  KNOWN_MAPPERS lists every concrete Mapper on the classpath — silently
  forgotten registration was the failure mode.
- ParityMarkersTest.parityMarkersDoNotPickUpUnannotatedFields: added a
  @ParitySentinel field to the fixture so the assertion is non-vacuous.
- Manifest: @JsonIgnoreProperties(ignoreUnknown=false) so tampered or
  forward-incompatible bundles fail at parse. Single Collections.unmodifiableMap
  wrap (was double-copied via